update glitch is fixed
* added nav link in both admin and blog site
* cleaned up code abit

--- a/client-sides/public/index.html
+++ b/client-sides/public/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <nav>
+            <a href="http://localhost:3001/">Admin</a>
+        </nav>
     </div>
     <script src="index.js"></script>
 </body>
