next and previous functionlaity is added
* blog sites mark is adjusted
* admin site styles been adjusted

--- a/client-sides/public/index.html
+++ b/client-sides/public/index.html
@@ -11,6 +11,11 @@
         <nav>
             <a href="http://localhost:3001/">Admin</a>
         </nav>
+        <div class="blogs"></div>
+        <div class="btns-wrapper">
+            <div class="prev-btn">Prev</div>
+            <div class="next-btn">Next</div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
