--- a/client-sides/public/index.html
+++ b/client-sides/public/index.html
@@ -16,11 +16,33 @@
             <a href="http://localhost:3001/">Admin</a>
         </nav>
         <div class="blogs"></div>
+        <div class="comments">
+            <div class="errors"></div>
+            <form action="" method="" onsubmit="return false">
+                <legend>Feel like posting a comment</legend>
+                <fieldset>
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name">
+                </fieldset>
+                <fieldset>
+                    <label for="email">Your Email (* will not be shared publicly )</label>
+                    <input type="email" id="email" name="email" required>
+                </fieldset>
+                <fieldset>
+                    <label for="body">Your Comment</label>
+                    <textarea name="body" id="body" rows="4" required></textarea>
+                </fieldset>
+                <button type="submit" onclick="handleUserCommentSubmit()">Post Comment</button>
+            </form>
+            <div class="all-comments"></div>
+        </div>
         <div class="btns-wrapper">
             <div class="prev-btn"><i class="fa-solid fa-left-long"></i><span>Prev</span></div>
             <div class="next-btn"><span>Next</span><i class="fa-solid fa-right-long"></i></div>
         </div>
     </div>
     <script src="index.js"></script>
+    <script src="commentForm.js"></script>
+    <script src="showComments.js"></script>
 </body>
 </html>
