--- a/client-sides/public/index.html
+++ b/client-sides/public/index.html
@@ -22,15 +22,15 @@
                 <legend>Feel like posting a comment</legend>
                 <fieldset>
                     <label for="name">Your Name</label>
-                    <input type="text" id="name" name="name">
+                    <input type="text" id="name" name="name" required placeholder="your name goes here">
                 </fieldset>
                 <fieldset>
                     <label for="email">Your Email (* will not be shared publicly )</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required placeholder="your email goes here">
                 </fieldset>
                 <fieldset>
                     <label for="body">Your Comment</label>
-                    <textarea name="body" id="body" rows="4" required></textarea>
+                    <textarea name="body" id="body" rows="4" required placeholder="your comment goes here"></textarea>
                 </fieldset>
                 <button type="submit" onclick="handleUserCommentSubmit()">Post Comment</button>
             </form>
